hard-gists/2708979/run.log
=== Docker Run Log for 2708979 ===
Started at: Mi 29. Okt 13:11:58 CET 2025

[2025-10-29 13:11:59] START: Running container for 2708979
[2025-10-29 13:11:59] SUCCESS: Container cb860f94264e030081b330f21699b17a3a28d675da1956c0f9fb6513cfe15567 started for 2708979
=== Container logs for 2708979 ===
  File "/snippet.py", line 37
    print "Progress: ", progress
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2708979 ===
[2025-10-29 13:12:01] INFO: Container cb860f94264e030081b330f21699b17a3a28d675da1956c0f9fb6513cfe15567 has stopped
